--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Ondion/Mongo#readme",
   "dependencies": {
-    "mongoose": "^6.6.1"
+    "mongoose": "^6.6.1",
+    "node-typescript": "^0.1.3",
+    "typescript": "^4.8.3"
   }
 }
