--- a/Exercícios/mongodb-nodejs-poo/package.json
+++ b/Exercícios/mongodb-nodejs-poo/package.json
@@ -22,14 +22,14 @@
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@types/chai": "4.3.0",
-    "@types/express": "4.17.13",
+    "@types/express": "^4.17.13",
     "@types/mocha": "9.1.0",
-    "@types/node": "16.11.7",
+    "@types/node": "^16.11.7",
     "@types/sinon": "10.0.11",
     "@typescript-eslint/eslint-plugin": "5.3.1",
     "@typescript-eslint/parser": "5.3.1",
     "chai": "4.3.6",
-    "dotenv": "16.0.0",
+    "dotenv": "^16.0.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "15.0.0",
@@ -41,13 +41,13 @@
     "nyc": "15.1.0",
     "sinon": "13.0.1",
     "ts-node": "10.4.0",
-    "ts-node-dev": "1.1.8",
-    "typescript": "4.4.3"
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
-    "express": "4.17.1",
+    "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "mongoose": "6.1.8",
-    "zod": "3.11.6"
+    "mongoose": "^6.1.8",
+    "zod": "^3.11.6"
   }
 }
